 - Change GenericMatrix::compresss to return a new matrix (7be3a29)
 - Add function GenericTensor::empty()
 - Deprecate resizing of linear algebra via the GenericFoo interfaces
	(fixes #213)
 - Deprecate MPI::process_number() in favour of MPI::rank(MPI_Comm)
 - Use PETSc built-in reference counting to manage lifetime of wrapped PETSc
	objects
 - Remove random access function from MeshEntityIterator (fixes #178)
 - Add support for VTK 6 (fixes #149)
 - Use MPI communicator in interfaces. Permits the creation of distributed and
	local objects, e.g. Meshes.
 - Reduce memory usage and increase speed of mesh topology computation
1.3.0 [2014-01-07]
 - Feature: Enable assignment of sparse MeshValueCollections to MeshFunctions
 - Feature: Add free function assign that is used for sub function assignment
 - Feature: Add class FunctionAssigner that cache dofs for sub function
	assignment
 - Fix runtime dependency on checking swig version
 - Deprecate DofMap member methods vertex_to_dof_map and dof_to_vertex_map
 - Add free functions: vertex_to_dof_map and dof_to_vertex_map, and correct the
	ordering of the map.
 - Introduce CompiledSubDomain a more robust version of compiled_subdomains,
	which is now deprecated
 - CMake now takes care of calling the correct generate-foo script if so needed.
 - Feature: Add new built-in computational geometry library (BoundingBoxTree)
 - Feature: Add support for setting name and label to an Expression when
	constructed
 - Feature: Add support for passing a scalar GenericFunction as default value
	to a CompiledExpression
 - Feature: Add support for distance queries for 3-D meshes
 - Feature: Add PointIntegralSolver, which uses the MultiStageSchemes to solve
	local ODEs at Vertices
 - Feature: Add RKSolver and MultiStageScheme for general time integral solvers
 - Feature: Add support for assigning a Function with linear combinations of
	Functions, which lives in the same FunctionSpace
 - Added Python wrapper for SystemAssembler