@@ -1,3 +1,4 @@
+ - Remove Boost.MPI dependency
  - Change GenericMatrix::compresss to return a new matrix (7be3a29)
  - Add function GenericTensor::empty()
  - Deprecate resizing of linear algebra via the GenericFoo interfaces
